This fixes #803 vertical text overflowing

--- a/docs/fmi-spec.css
+++ b/docs/fmi-spec.css
@@ -444,13 +444,13 @@ body{
 }
 
 .vertical-text {
-	transform: rotate(-90deg) translate(-8em, 0);
+	transform: rotate(-90deg) translate(-11em, 0);
 	transform-origin: left top 0;
   float: left;
   display: inline-block;
   white-space: nowrap;
   width: 1em;
-  height: 8em;
+  height: 11em;
 }
 
 /* no alternating row colors */
